--- a/roles/kvm_provision/tasks/main.yml
+++ b/roles/kvm_provision/tasks/main.yml
@@ -32,12 +32,23 @@
       cmd: qemu-img resize "{{ libvirt_pool_dir }}/{{ vm_name }}.qcow2" +{{ vm_resize }}G
     when: copy_results is changed and vm_resize > 0
   - name: Configure the image
-    command: |
-      virt-customize -a {{ libvirt_pool_dir }}/{{ vm_name }}.qcow2 \
-      --hostname {{ vm_name }} \
-      --root-password password:{{ vm_root_pass }} \
-      --ssh-inject 'root:file:{{ ssh_pub_key }}' \
-      --uninstall cloud-init --selinux-relabel
+    block:
+    - name: selinux image  
+      command: |
+        virt-customize -a {{ libvirt_pool_dir }}/{{ vm_name }}.qcow2 \
+        --hostname {{ vm_name }} \
+        --root-password password:{{ vm_root_pass }} \
+        --ssh-inject 'root:file:{{ ssh_pub_key }}' \
+        --uninstall cloud-init --selinux-relabel
+      when: vm_selinux
+    - name: non selinux image   
+      command: |
+        virt-customize -a {{ libvirt_pool_dir }}/{{ vm_name }}.qcow2 \
+        --hostname {{ vm_name }} \
+        --root-password password:{{ vm_root_pass }} \
+        --ssh-inject 'root:file:{{ ssh_pub_key }}' \
+        --uninstall cloud-init
+      when: not vm_selinux
     when: copy_results is changed
   - name: Define vm
     community.libvirt.virt:
